force-app/main/default/objects/Room_Type__c/Room_Type__c.object-meta.xml
<CustomObject>
    <label>Room Type</label>
    <nameField>
        <displayFormat>HMS-{0000}</displayFormat>
        <label>Room</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Room Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>