force-app/main/default/objects/Room_Type__c/fields/Check_Availability__c.field-meta.xml
<CustomField>
    <fullName>Check_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Availability</label>
    <type>Checkbox</type>
</CustomField>