force-app/main/default/objects/Room_Type__c/fields/Hms_Description__c.field-meta.xml
<CustomField>
    <fullName>Hms_Description__c</fullName>
    <label>Hms-Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>