force-app/main/default/objects/Room_Type__c/fields/Hotel_Name__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Name__c</fullName>
    <label>Hotel Name</label>
    <referenceTo>Hotel__c</referenceTo>
    <relationshipLabel>Room Types</relationshipLabel>
    <relationshipName>Room_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>