force-app/main/default/objects/Room_Type__c/fields/Minimum_and_Maximum_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Minimum_and_Maximum_Capacity__c</fullName>
    <label>Minimum and Maximum Capacity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>