force-app/main/default/objects/Room_Type__c/fields/Room_Number__c.field-meta.xml
<CustomField>
    <fullName>Room_Number__c</fullName>
    <label>Room Number</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HMS-101</fullName>
            </value>
            <value>
                <fullName>HMS-102</fullName>
            </value>
            <value>
                <fullName>HMS-103</fullName>
            </value>
            <value>
                <fullName>HMS-104</fullName>
            </value>
            <value>
                <fullName>HMS-105</fullName>
            </value>
            <value>
                <fullName>HMS-201</fullName>
            </value>
            <value>
                <fullName>HMS-202</fullName>
            </value>
            <value>
                <fullName>HMS-203</fullName>
            </value>
            <value>
                <fullName>HMS-204</fullName>
            </value>
            <value>
                <fullName>HMS-205</fullName>
            </value>
            <value>
                <fullName>HMS-301</fullName>
            </value>
            <value>
                <fullName>HMS-302</fullName>
            </value>
            <value>
                <fullName>HMS-303</fullName>
            </value>
            <value>
                <fullName>HMS-304</fullName>
            </value>
            <value>
                <fullName>HMS-305</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>