force-app/main/default/objects/Room_Type__c/fields/Room_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Room_Type_Name__c</fullName>
    <label>Room Type Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Room</fullName>
            </value>
            <value>
                <fullName>Double Room</fullName>
            </value>
            <value>
                <fullName>Twin Room</fullName>
            </value>
            <value>
                <fullName>Queen Room</fullName>
            </value>
            <value>
                <fullName>King Room</fullName>
            </value>
            <value>
                <fullName>Suite Room</fullName>
            </value>
            <value>
                <fullName>Junior Suite Room</fullName>
            </value>
            <value>
                <fullName>Connecting  Rooms</fullName>
            </value>
            <value>
                <fullName>Family Room</fullName>
            </value>
            <value>
                <fullName>Deluxe Room</fullName>
            </value>
            <value>
                <fullName>Executive  Room</fullName>
            </value>
            <value>
                <fullName>Accessible Room</fullName>
            </value>
            <value>
                <fullName>Adjoining Rooms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>